<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/googleMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_search_city"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        app:cardBackgroundColor="@color/grey_700"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false">

        <TextView
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="@dimen/_5sdp"
            android:ellipsize="end"
            android:fontFamily="@font/garnett_regular"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10sdp"
            android:hint="@string/search_here"
            android:textColorHint="@color/white_smoke"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:drawableStartCompat="@drawable/ic_search" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linear_weather_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/top_corner_rounded"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_16sdp"
        android:paddingHorizontal="@dimen/_12sdp">

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/garnett_medium"
            android:gravity="center"
            tools:text="Wed, Mar 27"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/garnett_medium"
                    tools:text="Rajkot"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp" />

                <TextView
                    android:id="@+id/txt_country_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/garnett_medium"
                    tools:text="India"
                    android:textColor="@color/white_smoke"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/icon_weather_cloud" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_weather_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/garnett_regular"
                    android:text="@string/celsius"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp" />

                <TextView
                    android:id="@+id/txt_weather_numeric_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:fontFamily="@font/garnett_semi_bold"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    tools:text="27"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22ssp" />

                <TextView
                    android:id="@+id/txt_weather_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/garnett_regular"
                    android:gravity="center"
                    tools:text="Clouds"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/garnett_regular"
                android:gravity="start"
                android:text="@string/atmospheric_pressure"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/txt_atmospheric_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/garnett_regular"
                android:gravity="end"
                tools:text="1013hPa"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/garnett_regular"
                android:gravity="start"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/txt_wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/garnett_regular"
                android:gravity="end"
                tools:text="6.77 m/s"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/garnett_regular"
                android:gravity="start"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/txt_humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/garnett_regular"
                android:gravity="end"
                tools:text="53%"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_permission_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:visibility="visible"
        android:layout_above="@id/linear_weather_info"
        app:cardBackgroundColor="@color/grey_700"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_permission_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/garnett_light"
                android:padding="@dimen/_10sdp"
                android:text="@string/permission_denied_msg"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/txt_open_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/garnett_medium"
                android:text="@string/open_setting"
                android:textColor="@color/yellow_900"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>